<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:background="@color/leftbg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/darkBlue"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/icon_table"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="剩余桌数"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/remain_table"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white" />

    </LinearLayout>

    <GridView
        android:id="@+id/gv_table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:fadingEdge="none"
        android:listSelector="@color/transparent"
        android:numColumns="1"
        android:overScrollMode="never"
        android:scrollbars="none" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/menu_retail"
                style="@style/slidebar"
                android:text="@string/menu_retail"
                android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/menu_order"
                style="@style/slidebar"
                android:text="@string/menu_orderlist"/>

            <TextView
                android:id="@+id/menu_stored"
                style="@style/slidebar"
                android:text="@string/menu_store_recharge"/>
            <TextView
                android:id="@+id/menu_nb"
                style="@style/slidebar"
                android:text="@string/menu_nb_recharge"/>

            <TextView
                android:id="@+id/menu_update"
                style="@style/slidebar"
                android:text="@string/menu_setting"/>
            <TextView
                android:id="@+id/menu_print"
                style="@style/slidebar"
                android:text="@string/menu_print"/>
            <TextView
                android:id="@+id/menu_commodity"
                style="@style/slidebar"
                android:text="@string/menu_commodity"/>
            <TextView
                android:id="@+id/menu_activity"
                style="@style/slidebar"
                android:text="@string/menu_assist"/>
            <TextView
                android:id="@+id/menu_coupon"
                style="@style/slidebar"
                android:text="@string/menu_coupon"/>
            <TextView
                android:id="@+id/menu_mou"
                style="@style/slidebar"
                android:visibility="gone"
                android:text="激活牛只"/>
            <TextView
                android:id="@+id/menu_credit"
                style="@style/slidebar"
                android:text="@string/menu_anniversary"/>
            <TextView
                android:id="@+id/menu_update_info"
                style="@style/slidebar"
                android:text="@string/menu_check_upgrade" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/line_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="20dp">

        <com.qmuiteam.qmui.widget.QMUIRadiusImageView
            android:id="@+id/waiter_avatar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/logo_papa" />

        <TextView
            android:id="@+id/waiter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="收银人员请先登录"
            android:textColor="@color/purple" />
    </LinearLayout>


</LinearLayout>