<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_groud_white"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:text="设置密码"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <EditText
            android:id="@+id/et_old_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@null"
            android:hint="请输入原密码"
            android:textColorHint="#999999"
            android:textColor="#333333"
            android:maxLength="6"
            android:maxLines="1"
            android:digits="@string/digits_number"
            android:inputType="number"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
    <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#999"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/et_old_password"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="@id/tv_title"/>

    <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@null"
            android:hint="请输入6位数字密码"
            android:textColorHint="#999999"
            android:textColor="#333333"
            android:maxLength="6"
            android:maxLines="1"
            android:digits="@string/digits_number"
            android:inputType="numberPassword"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/et_old_password"/>
    <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#999"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="@id/tv_title"/>

    <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_groud_white"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toLeftOf="@+id/line2"/>

    <View
            android:id="@+id/line2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="#999"
            app:layout_constraintTop_toTopOf="@+id/tv_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"
            app:layout_constraintLeft_toRightOf="@+id/tv_cancel"
            app:layout_constraintRight_toLeftOf="@+id/tv_submit"/>

    <TextView
            android:id="@+id/tv_submit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_groud_white"
            android:gravity="center"
            android:layout_weight="1.0"
            android:text="@string/submit"
            android:textColor="@color/blue"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@+id/tv_cancel"
            app:layout_constraintLeft_toRightOf="@+id/line2"
            app:layout_constraintRight_toRightOf="@id/tv_title"/>
</android.support.constraint.ConstraintLayout>